force-app/main/default/objects/Producto_por_Visita__c/Producto_por_Visita__c.object-meta.xml
<CustomObject>
    <label>Producto por Visita</label>
    <nameField>
        <displayFormat>PxV-{0000}</displayFormat>
        <label>Nombre de Producto por Visita</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Productos por visitas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>