force-app/main/default/objects/Producto_por_Visita__c/fields/Interaccion__c.field-meta.xml
<CustomField>
    <fullName>Interaccion__c</fullName>
    <label>Interacción</label>
    <referenceTo>Interaccion__c</referenceTo>
    <relationshipLabel>Muestras entregadas</relationshipLabel>
    <relationshipName>Productos_por_visitas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>