force-app/main/default/objects/Producto_por_Visita__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Producto_para__c</field>
            <operation>equals</operation>
            <value>Best Care</value>
        </filterItems>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Entregas en Visitas</relationshipLabel>
    <relationshipName>Productos_por_visitas</relationshipName>
    <type>Lookup</type>
</CustomField>